fix authors and spelling

--- a/_posts/2022-06-09-sirmione.md
+++ b/_posts/2022-06-09-sirmione.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Sirmione, the Florida of Europe"
-author: Tim Best
+author: Timothy Best
 ---
 
 We decided to add Sirmione in to our trip due to a recommendation from Katherine's co professor and our friends Cory and Bennet. We are so glad we did! Driving in to the town gave us both the feeling of Florida. Something about the beeches, sea side motels with pools, and boulevard streets packed with beech goers. 
