--- a/_posts/2022-06-09-sirmione.md
+++ b/_posts/2022-06-09-sirmione.md
@@ -6,20 +6,20 @@ author: Timothy Best
 
 {% include tooltip.html text="Ciao" tip="Hello" %}
 
-We decided to add Sirmione in to our trip due to a recommendation from Katherine's our friends Cory and Bennet. We are so glad we did! Driving in to the town gave us both the feeling of Florida. Something about the beeches, sea side motels with pools, and boulevard streets packed with beech goers. 
+We decided to add Sirmione into our trip due to a recommendation from Katherine's our friends Cori and Bennet. We are so glad we did! Driving in to the town gave us both the feeling of Florida. Something about the beeches, seaside motels with pools, and boulevard streets packed with beech goers. 
 
-On our way katherine looked up the letters on EU license plates and we made a game of figuring  out what countries all the cars and truckers were from. Since we had plenty of license plate practice on the 2:30 hour drive over we quickly picked up the Sirmione was full of german motorists/tourist
+On our way, Katherine looked up the letters on EU license plates, as all EU plates also have abbreviations for which countries people come from. We made a game of figuring out which countries each car and truck was from. Since we had plenty of license plate practice on the 2:30 hour drive to there, we quickly picked up that Sirmione was full of German motorists/tourist!
 
-When we arrived we quickly unpacked our car and got settled into our hotel room before walking to the Spa we had reservations at. As we walked the street got narrower and narrower until we needed to cross a small water way in front of a Castle. Yes a real Castle. With a moat! Then we had to pass many shops and street full of people to get to the spa.
+When we arrived, we quickly unpacked our car and got settled into our hotel room before walking to the Spa we had reservations at. As we walked, the street got narrower and narrower until we needed to cross a small water way in front of a Castle. Yes a real Castle. With a moat! Then we had to pass many shops and street full of people to get to the spa.
 
-The Spa was amazing! The water is naturally warmed by the earth and had beautiful views of the lake (name of lake here?). MY favorite part was a 10 lap meditation circuit. You first went up a few step and took a short walk in the naturally warmed water about waist high. At the other end there is no exit and you must go back in waist high water the is cold. It was deeply relaxing and quite fun to share the cold water shock with other guests. Turns out that translates well between German, Italian and English.
+The Spa was amazing! The water is naturally warmed by the earth and had beautiful views of the lake. MY favorite part was a 10 lap meditation circuit. You first went up a few step and took a short walk in the naturally warmed water about waist-high. At the other end there is no exit and you walk back in waist-high water that is cold. It was deeply relaxing and quite fun to share the cold water shock with other guests. Turns out that the body reaction to the temperature change translates well between German, Italian and English. We did this numerous times, and enjoyed the temperature changes!
 
 ![info about the spa water](/assets/images/2022-06-09-sirmione/IMG_20220609_184624.jpg)
 
-A close second was the saunas where you through a number of rooms of varying heat and humidity with scented mists and showers between
+A close second were the saunas where you through a number of rooms of varying heat and humidity with scented mists and showers between. Each room is labeled with their temperature and humidity level, tied to an area of the world that this is normal. It was great to feel the changes in each and see how long we could sit in every one. 
 
-After the Spa we head to our last dinner in italy and had an amazing raw seafood plater, perfectly cooked mussels in an asparagus sauce and something else. The restaurant was on a dock and the ducks and fish were quite accustomed to getting food from the patrons. We enjoyed watching all of them circle around our table below. They also seemed to know small humans are more likely to give food as they congregated below the family next to use. 
+After the Spa, we head to our last dinner in Italy and had an amazing raw seafood platter, perfectly cooked mussels in an asparagus sauce and something else. The restaurant was on a dock and the ducks and fish were quite accustomed to getting food from the patrons. We enjoyed watching all of them circle around our table below in the lake. They also seemed to know that small humans (kids) are more likely to give food, as they congregated below the family next to us. 
 
-Overall Sirmione was a wonderful send off from italy. {% include tooltip.html text="Arrivederci!" tip="Good bye!" %}
+Overall Sirmione was a wonderful send off from Italy. {% include tooltip.html text="Arrivederci!" tip="Good bye!" %}
 
 {% include image-gallery.html folder="/assets/images/2022-06-09-sirmione/photos" %}
