--- a/_posts/2022-05-24-pompeii.md
+++ b/_posts/2022-05-24-pompeii.md
@@ -8,11 +8,11 @@ _Note: Photos are below!_
 
 **Wednesday was all about Pompeii.** A 2-hour train ride from Rome, we made it a day trip.
 
-Everyone knows about the volcano. Mount Vesuvius erupted in August of 79 AD and buried several cities nearby in volcanic ash - including Pompeii. What I didn’t realize is that the eruption came on in stages. First there were earthquakes, which were common for the area. These got worse and sulfur was found in the drinking water. Then there was the explosion and dark clouds, along with flying rocks and raining ash. Then a poisonous gas was released that instantly killed everything in a 10 km (7.1 mile) radius. Then, the ash continued, and actually buried the city.
+Everyone knows about the volcano. Mount Vesuvius erupted in August of 79 AD and buried several cities nearby in volcanic ash - including Pompeii. What I didn’t realize is that the eruption came on in stages. First, there were earthquakes, which were common in the area. These got worse and sulfur was found in the drinking water. Then there was the explosion and dark clouds, along with flying rocks and raining ash. Then a poisonous gas was released that instantly killed everything within a 10 km (7.1 miles) radius. Then, the ash continued and buried the city.
 
-Romans didn’t have any recorded volcano activity, so they had no idea what was happening and how dangerous it was. However, most of the city was able to evacuate. The people who died in Pompeii were hold-outs as the eruption got worse, or slaves of holdouts who weren’t able to leave. And they died mainly from the poisonous gas, as opposed to anything else. In a city of 12,000 people, archeologists estimate that 1,200 died from the eruption. For the rest, the Emperor funded numerous neighborhoods and facilities (bath houses, bars, union centers for freed slaves) to be build in nearby towns, from Naples to beyond. They set up funds to help people get re-started with businesses and gave out food. They couldn’t dig the city out, as volcanic ash is 10x denser than snow, it was an impossible task. So they relocated everyone instead. Very little is written of it, speculation says that this is from trauma and the instinct to be silent post-incident. We listened to chapters about Pompeii from the book Four Lost Cities by Annalee Newitz on the train down and back, which provided most of this rich historical context.
+Romans didn’t have any recorded volcano activity, so they had no idea what was happening and how dangerous it was. However, most of the city was able to evacuate. The people who died in Pompeii were hold-outs as the eruption got worse or slaves of holdouts who weren’t able to leave. And they died mainly from the poisonous gas, as opposed to anything else. In a city of 12,000 people, archeologists estimate that 1,200 died from the eruption. For the rest, the Emperor funded numerous neighborhoods and facilities (bathhouses, bars, union centers for freed slaves) to be built in nearby towns, from Naples to beyond. They set up funds to help people get re-started with businesses and gave out food. They couldn’t dig the city out, as volcanic ash is 10x denser than snow, it was an impossible task. So they relocated everyone instead. Very little is written of it, speculation says that this is from trauma and the instinct to be silent post-incident. We listened to chapters about Pompeii from the book Four Lost Cities by Annalee Newitz on the train down and back, which provided most of this rich historical context.
 
-With this context, we walked around one of the most intact Roman cites on the planet. Only about 30% of the city is dug out, excavated. Many of the most impressive frescoes are in a museum in Naples, which we will visit in the future! However, walking around the city was incredible, really thinking about how a city is constructed, and as Newitz focuses on in their book, how the city was focused on street life.
+With this context, we walked around one of the most intact Roman cities on the planet. Only about 30% of the city is dug out, excavated. Many of the most impressive frescoes are in a museum in Naples, which we will visit in the future! However, walking around the city was incredible, really thinking about how a city is constructed, and as Newitz focuses on in their book, how the city was focused on street life.
 
 Pompeii was also an incredibly diverse city. It had residents from around the Mediterranean, from Tunisia to Egypt to Spain to Northern Italy. The languages and art was diverse. And it had an entire class of middle-income worker: predominantly freed slaves. In Rome, slaves were treated much better than the US, as they were your workers. If they achieved freedom, then their businesses would be tied to your family’s wealth and so there was also an economic incentive to treat these people well and free them. About 30% of the population were either slaves or liberty (freed slaves). And these folks gained economic and started to gain political power, and had their own social norms. Elite Roman rulers were not fans of this, as it was an unsettling of power. But, nonetheless, this exciting social change was happening in Pompeii at this time.
 
