--- a/_posts/2022-05-25-rome.md
+++ b/_posts/2022-05-25-rome.md
@@ -10,14 +10,14 @@ _Note: Photos are below!_
 
 We toured the Catacombs of San Sebastián and the Colosseum.
 
-The catacombs were Christian burial grounds during the end of the Roman period. They were underground and outside of the city (which all burial grounds were beyond city walls) in a time where being Christian sometimes resulted in your execution. Christians buried their dead with the entire body intact, wrapping it in cloth and placing it into these below-ground carved out coffins - waiting for the second coming of Jesus to use the body again for this temporary sleeping period. The universal language of the time was Greek, which was also the universal language of Christianity. Cemetery is a greek word for resting/sleeping place. Romans, on the other hand, could either cremate or bury their dead in tombs in the immediate journey to the after world.
+The catacombs were Christian burial grounds during the end of the Roman period. They were underground and outside of the city (which all burial grounds were beyond city walls) in a time when being Christian sometimes resulted in your execution. Christians buried their dead with the entire body intact, wrapping it in cloth and placing it into these below-ground carved-out coffins - waiting for the second coming of Jesus to use the body again for this temporary sleeping period. The universal language of the time was Greek, which was also the universal language of Christianity. Cemetery is a greek word for resting/sleeping place. Romans, on the other hand, could either cremate or bury their dead in tombs in the immediate journey to the afterworld.
 
-At the Catacombs of San Sebastián, we were able to see both Christian catacombs and a handful of Roman tombs (which had been rediscovered in the 1920s). The different was interesting to observe between the ornate, wealthy tombs with stucco ceilings from the Romans, and the carved Greek lettering above the Christian catacomb resting places.
+At the Catacombs of San Sebastián, we were able to see both Christian catacombs and a handful of Roman tombs (which had been rediscovered in the 1920s). The difference was interesting to observe between the ornate, wealthy tombs with stucco ceilings from the Romans, and the carved Greek lettering above the Christian catacomb resting places.
 
 The Colosseum was quite the trip. However, it was a unique day for two reasons
 
 - The firefighters were practicing repelling from the top of the outside of the colosseum, training and practicing
-- Crowds of soccer lovers were everywhere, as Italy had just won a European Championship on Wednesday night. They were in a crimson red, and singing on key together. Grown men, and hearty sports fans, belting out song together in the street as a celebration. It was heartwarming to see.
+- Crowds of soccer lovers were everywhere, as Italy had just won a European Championship on Wednesday night. They were in a crimson red and singing on key together. Grown men, and hearty sports fans, belting out in song together in the street as a celebration. It was heartwarming to see.
 
 The Colosseum itself did not disappoint. It was big and grand, despite being stripped for building materials over the centuries. The intricacy and the detail was obvious. Romans were given tickets to the Colosseum, whose events were free. However, you got assigned a seat based on your class. Senators even had their names engraved on their seats. There was an intricate elevator system for people to rise up from the floor. Statue heads shown, discovered in the basement. And the space was just immense. Plenty of great photos for the holiday card also!
 
