--- a/_posts/_drafts/2022-07-05-zanzibar.md
+++ b/_posts/_drafts/2022-07-05-zanzibar.md
@@ -9,94 +9,94 @@ author:
 
 ## New Friends
 
-In Zanzibar we were staying in a small hotel a block away from the ocean. We were on of two couples on the property. When we awoke the first morning we headed to the breakfast area, an outside pavilion with a few picnic benches, As we were eating the other couple arrived. We said hello and exchanged pleasantries. BWithin no time we hit it off sharing stories about our travels and where we are from. They had been on the island for a few weeks now so we had plenty of questions about what they had been up to and what they recommenced. We ended up talking all morning. They even offered us real coffee. It was the first cup of non instant coffee I had since Amsterdam. They were so nice and we were so happy to have other travelers to socialize with. Both the Safari and hike up Kilimanjaro had been rather social isolating for us.
+In Zanzibar, we were staying in a small hotel a block away from the ocean. We were one of two couples on the property. When we awoke the first morning we headed to the breakfast area, an outside pavilion with a few picnic benches, As we were eating the other couple arrived. We said hello and exchanged pleasantries. Within no time we hit it off sharing stories about our travels and where we are from. They had been on the island for a few weeks now so we had plenty of questions about what they had been up to and what they recommenced. We ended up talking all morning. They even offered us real coffee. It was the first cup of non-instant coffee I had since Amsterdam. They were so nice and we were so happy to have other travelers to socialize with. Both the Safari and hike up Kilimanjaro had been rather socially isolating for us.
 
 ![kat on the unfinished roof of our stay](/assets/images/2022-07-05-zanzibar/roof.jpg)
 {% include caption.html text="Taking a quick view of the area from the unfinished roof" %}
 
-In the afternoon, Kat and I were exhausted from our non stop travel. We had been saying that Zanzibar would be our vacation from our vacation and we were ready to stare at a wall. So that is just what we did. It was everything we needed and more.
+In the afternoon, Kat and I were exhausted from our non-stop travel. We had been saying that Zanzibar would be our vacation from our vacation and we were ready to stare at a wall. So that is just what we did. It was everything we needed and more.
 
 ## A chance encounter
 
-That evening we regrouped with our new friends Edvard and Nete. We headed to the beach and Nete stopped to make a purchase from a local merchant. As we waited in a a resort parking lot a tiny kitten approached us. She started meowing and rubbing up against our legs. We asked the guards of the resort if she had a mother and they told us she did not. Not wanting to get emotionally attached we tried to ignore her but she was persistent. Edvard (not wanting to adopt a second cat from a foreign country) picked her up and put her in the grass near by. But the second he let go of her she ran back to our feet and continued to cry. At this point Nete blew in like the wind with an enthusiastic, "Baby!!!!" she had swooped up the kitten in her arms and was off to our hotel to convince the owner to care for the cat. As quickly as she had shown up she was gone. 
+That evening we regrouped with our new friends Edvard and Anet. We headed to the beach and Anet stopped to make a purchase from a local merchant. As we waited in a resort parking lot a tiny kitten approached us. She started meowing and rubbing up against our legs. We asked the guards of the resort if she had a mother and they told us she did not. Not wanting to get emotionally attached we tried to ignore her but she was persistent. Edvard (not wanting to adopt a second cat from a foreign country) picked her up and put her on the grass nearby. But the second he let go of her she ran back to our feet and continued to cry. At this point Anet blew in like the wind with an enthusiastic, "Baby!!!!" she had swooped up the kitten in her arms and was off to our hotel to convince the owner to care for the cat. As quickly as she had shown up she was gone. 
 
-Not wanting to go to dinner without here we waited for 1 minute. Which quickly turned to 5, 10 then 15 minutes. At this point we decided to go back to the hotel and check on things. There we found Nete and the kitten. She had managed to convince the hotel owner and manager to care for the kitten until she was well enough to survive on her own. The manager had also built here a small enclosure in the back and placed out a small saucer with milk. 
-
-## Revenge of the Dust
-
-The next day I awoke with a cough, stuff nose and nasal drip. Inhaling all the dust in the serengeti had caught up to me. I was kicking my self for not wearing a mask during the game drives. When we arrived at breakfast we noticed that there was now a single table set for the four of us. The hotel owner was so happy that we had become friends and even introduced us to some of her Italian friends/family via face time. 
-
-About halfway through our meal the kitten had made her way to us. We could tell that she was looking for a motherly connection. After I finished my meal I picked her up into my lap. As I pet her I noticed that she had a tick. After a quick inspection I found two more. 
+Not wanting to go to dinner without her we waited for 1 minute. Which quickly turned to 5, 10 then 15 minutes. At this point, we decided to go back to the hotel and check on things. There we found Anet and the kitten. She had managed to convince the hotel owner and manager to care for the kitten until she was well enough to survive on her own. The manager had also built here a small enclosure in the back and placed out a small saucer with milk. 
 
 ## Day 2
 
+## Revenge of the Dust
+
+The next day I awoke with a cough, stuffy nose, and nasal drip. Inhaling all the dust in the Serengeti had caught up to me. I was kicking myself for not wearing a mask during the game drives. When we arrived at breakfast we noticed that there was now a single table set for the four of us. The hotel owner was so happy that we had become friends and even introduced us to some of her Italian friends/family via face time. 
+
+About halfway through our meal the kitten had made her way to us. We could tell that she was looking for a motherly connection. After I finished my meal I picked her up into my lap. As I pet her I noticed that she had a tick. After a quick inspection, I found two more. 
+
 ## Tick Removal
 
-We started brainstorming what we had brought that would help us remove the ticks. I offered up our nail clips but they were shot down. Nete and Edv ard explained how that would leave the head of the tick in her body and we needed to twist the tick out instead. Remembering that we hd tweezers in the first aid kit, Katie when back to our room to get them. With tweezers in hand we got to work. I parted the hair near the tick and tried to hold her still while Edvard grabbed the tick and started twisting. It was a painful ordeal. The tick was strong and would eventually break loose of the tweezers after a turn or two reburrowing into her. Eventually, Katie noticed that some of the kittens hair was getting caught in the tweezers and used our nail scissors to remove the near by hair. With the area cleared we were able to remove all three ticks.
+We started brainstorming what we had brought that would help us remove the ticks. I offered up our nail clips but they were shot down. Anet and Edvard explained how that would leave the head of the tick in her body and we needed to twist the tick out instead. Remembering that we had tweezers in the first aid kit, Katie when back to our room to get them. With tweezers in hand, we got to work. I parted the hair near the tick and tried to hold her still while Edvard grabbed the tick and started twisting. It was a painful ordeal. The tick was strong and would eventually break loose of the tweezers after a turn or two reburrowing into her. Eventually, Katie noticed that some of the kitten's hair was getting caught in the tweezers and used our nail scissors to remove the nearby hair. With the area cleared we were able to remove all three ticks.
 
-Once finished, I let go of Paka. Her cries immediately stopped but she didn't budge. She stayed exactly where she was in my lap, looked up at me and started purring. Unbeknownst to me this is the moment tha she stole my heart. She knew that we were helping her and trusted us completely that the pain we put her through was done so with love.
+Once finished, I let go of her. Her cries immediately stopped but she didn't budge. She stayed exactly where she was on my lap, looked up at me, and started purring. Unbeknownst to me, this is the moment that she stole my heart. She knew that we were helping her and trusted us completely that the pain we put her through was done so with love.
 
 
 ## Chicken Noodle Soup
 
-Given my sickness and our need for relaxation, we decided to rest and meet up with our new friends later that evening for a swim, to watch the sunset and have some dinner. We relaxed in our room for most of the morning and hung out with the cat. We tried to clean her up a little bit did a bit of socializing with the cat. At this point she loved our company, was learning how to walk, but didnt have the energy to play or groom herself. 
+Given my sickness and our need for relaxation, we decided to rest and meet up with our new friends later that evening for a swim, to watch the sunset, and to have some dinner. We relaxed in our room for most of the morning and hung out with the cat. We tried to clean her up a little bit and did a bit of socializing with the cat. At this point, she loved our company, and was learning how to walk, but didn't have the energy to play or groom herself. 
 
-For lunch, we went to a near by spa that was serveing western food. I ordered a chicken noodle soup and ginger tea for my throat. The ginger tea was the strongest ginger tea I had ever had. I dumped all of the sugar packets on the table in and then it was only barely palatable. Stobernally and "for my health" I drank the entire glass and the glass Katie ordered. I brought a small amount of chicken back to Paka and she turned her nose up at it perfering the milk and caned tuna we had been feeding her.
+For lunch, we went to a nearby spa that was serving western food. I ordered a chicken noodle soup and ginger tea for my throat. The ginger tea was the strongest ginger tea I had ever had. I dumped all of the sugar packets on the table and then it was only barely palatable. Stobernally and "for my health" I drank the entire glass and the glass Katie ordered. I brought a small amount of chicken back to the kitten and she turned her nose up at it preferring the milk and canned tuna we had been feeding her.
 
 ## Sand Art
 
-That evening we meet up with our friends. Still not feeling well I sat on the beach and watched our things while they enjoyed the water. To pass the time I started making a turtle in the sand. As I worked I was approached by many vendors trying to sell me goods. When they were done swimming we were approached by a vendor. In response to his sales pitch we replied "2 dollars for photo with turtle". He laughed and without hesitation responded "maybe tomorrow". We all had a good laugh. For me the moment was a nice reminder that no matter our background and current situation. We are all human.
+That evening we meet up with our friends. Still not feeling well I sat on the beach and watched our things while they enjoyed the water. To pass the time I started making a turtle in the sand. As I worked I was approached by many vendors trying to sell me goods. When they were done swimming we were approached by a vendor. In response to his sales pitch, we replied "2 dollars for photo with turtle". He laughed and without hesitation responded, "maybe tomorrow". We all had a good laugh. For me, the moment was a nice reminder that no matter our background and current situation. We are all human.
 
 ## Day 3
 
 ## Snorkeling
 
-That morning we got up early and went to the beach. There awaiting for us was a doha named the SeaFari II. We loved the name and the narative that we had done a safari and now we will have done a seafari. We boarded and headed out to sea. Having seen the boat from the shore I was excited to be on one. I really enjoy the feeling and perspective of being on the water. 
+That morning we got up early and went to the beach. There awaiting us was a Doha named the Seafari II. We loved the name and the narrative that we had done a safari and now we will have done a Seafari. We boarded and headed out to sea. Having seen the boat from the shore I was excited to be on one. I really enjoy the feeling and perspective of being on the water. 
 
-This morning turned out to be quite windy and we had a 2-3 hours boat ride from where we were staying to the snorkeling spot. The wind created a lot of waves and gave some of the other passengers a little bit of fright. I however, was very content. I loved the sea mist blowing in my face as the boat crashed into each wave. And I loved getting to see more of the island. I was fascinated with how much development was underway. Given the coming effects of climate change, I can't believe that there is still money being put into major construction projects at sea level.
+This morning turned out to be quite windy and we had a 2-3 hours boat ride from where we were staying to the snorkeling spot. The wind created a lot of waves and gave some of the other passengers a little bit of fright. I, however, was very content. I loved the sea mist blowing in my face as the boat crashed into each wave. And I loved getting to see more of the island. I was fascinated with how much development was underway. Given the coming effects of climate change, I can't believe that there is still money being put into major construction projects at sea level.
 
-Snorkling was amazing!!! Thankfully, we were protected from the wind by a small island near by. We saw tons of fish, els, starfish, sea urchants and coral. Lots of dorey along with lot of nemos. I was wishing our camrea was water proof. We then ate an amzing lunch on the boat and went for a second snokel. Most of the other folks stayed on board due to the cold water. To deal with the temperature Katie asked to barrow our guides wet suit and he grasiously allowed her to do so.
+Snorkeling was amazing!!! Thankfully, we were protected from the wind by a small island nearby. We saw tons of fish, eels, starfish, sea urchins, and coral. Lots of Dorey's along with lots of Nemos. I was wishing our camera was waterproof. We then ate an amazing lunch on the boat and went for a second snorkel. Most of the other folks stayed on board due to the cold water. To deal with the temperature Katie asked to barrow our guide's wet suit and he graciously allowed her to do so.
 
 On the way back I was no longer worried about sea sickness ruining my snorkeling and got up on the second deck of the boat. I enjoyed the views and soaking in the sun.
 
 ## Dehydration
 
-That night we went out for food and happy hour drinks. As we were eating Katie began to fell unwell and we had to go home early. I got her back to our room and had her drink lots of fluids. I then devised a plan to lift her spirts. I went out side to grab the kitten and bring her into our room. It worked! She snuggled right up with Katie. Burowing her self into her arm pit and started purring.
+That night we went out for food and happy hour drinks. As we were eating Katie began to feel unwell and we had to go home early. I got her back to our room and had her drink lots of fluids. I then devised a plan to lift her spirits. I went outside to grab the kitten and bring her into our room. It worked! She snuggled right up with Katie. Burrowing herself into her armpit and started purring.
 
-As it became time to go to bed we discuseed what to do with the cat. KAtie asked if she could stay here. And we agreed the she was too small to sleep with us. I said we could put her in the bathroom and katie replied "If you put her in the bathroom we are keeping her". So I immediatly got up and put her back out side. But she was having non of that. She got to our door and stared meowing right after I closed it. Needless to say now, she slet in the bathroom that night.
+As it became time to go to bed we discussed what to do with the cat. Katie asked if she could stay here. And we agreed that she was too small to sleep with us. I said we could put her in the bathroom and Katie replied "If you put her in the bathroom we are keeping her". So I immediately got up and put her back outside. But she was having non of that. She got to our door and started meowing right after I closed it. Needless to say now, she slept in the bathroom that night.
 
 ## Day 4 (7/8)
 
 ## The bath
 
-Today Edvard and Nete were off to another hotel. We decided that morning over breakfest that it would be good to give the cat a bath before they went. We had wanted to do it earlier but were waiting until she was stronger and could have a full day of sun to dry off. After brekfest we got to work. It ended up taking all four of us. I held her in the sink and Nete turned on and off the water and scrubbed at the dirt. As we removed most of the dirt and other material from her we noticed a 4th tick. 
+Today Edvard and Anet were off to another hotel. We decided that morning over breakfast that it would be good to give the cat a bath before they went. We had wanted to do it earlier but were waiting until she was stronger and could have a full day of sun to dry off. After breakfast, we got to work. It ended up taking all four of us. I held her in the sink and Anet turned on and off the water and scrubbed at the dirt. As we removed most of the dirt and other material from her we noticed a 4th tick. 
 
-Now having a system down. I held her. Katie cut back the hair. and Edvard removed the tick. After it was free we looked for more and noticed small black dots in her fur. We tried to clean them off that that is when they jumped! Fleas! Katie was still holding the nail sissor used to cut back the hair and with out hesitation got a flea mid air cutting it in half! Badass!
+Now having a system down. I held her. Katie cut back her hair. and Edvard removed the tick. After it was free we looked for more and noticed small black dots in her fur. We tried to clean them off that that is when they jumped! Fleas! Katie was still holding the nail scissor used to cut back the hair and without hesitation got a flea mid-air cutting it in half! Badass!
 
-We tried to remove the others with no luck. At this point the kitten was very uncomportable and we decided to call it good enough. Just as with the tick removal the previous day. She immdediatly calmed down and started purring.
+We tried to remove the others with no luck. At this point, the kitten was very uncomfortable and we decided to call it good enough. Just as with the tick removal the previous day. She immediately calmed down and started purring.
 
-She was clueless on how to dry out. She treid to shake her legs out but was to weak/ didnt have the cordination. We tried to encourage her to sit in the sun but she wanted to be next to/on top of us. So we took her back to our room and she went to sleep nussled in katies armpit. She was insistent on being right next to her skin. Yet another example of Paka advocating for her need and demanding exactly what she needed from us.
+She was clueless about how to dry out. She tried to shake her legs out but was too weak/ didn't have the coordination. We tried to encourage her to sit in the sun but she wanted to be next to/on top of us. So we took her back to our room and she went to sleep nuzzled in Katie's armpit. She was insistent on being right next to her skin. Yet another example of how she advocates and demands exactly what she needs from us.
 
-## The discusion
+## The discussion
 
-As she rested Katie and I chatted. Katie watned to take the kitten home and I thought that was insane and would be way to hard. We wraped up that discussion with Katie saying "we need to be on tha same page about this. If we both don't want to do it then we shouldn't". That was that. 
+As she rested Katie and I chatted. Katie wanted to take the kitten home and I thought that was insane and would be way too hard. We wrapped up that discussion with Katie saying "we need to be on the same page about this. If we both don't want to do it then we shouldn't". That was that. 
 
-We went about our day cuttling with paka and relaxing in our room, Until I asked "So what would be involved in getting a kitten into the US". Seceptially Katie asked "Does that mean you want to keep her" and I reliped with an ever increasing in pitch "maybeeee"
+We went about our day cuddling with the kitten and relaxing in our room Until I asked "So what would be involved in getting a kitten into the US". Seceptially Katie asked "Does that mean you want to keep her" and I replied with an ever-increasing in pitch "maybeeee"
 
-We then kicked into to full on burocracy hacking mode. A skillset we both refined while working at the United States Digital Service. We pulled togeather a list of all the airlines flying out of Zanzibar and Dar Es Sallam. My self working form the top of the list and Katie working from the bottom we read each airlines websites for their regulations. We found out that 6 out of the 14 airlines that would take a cat.
+We then kicked into full-on bureaucracy hacking mode. A skillset we both refined while working at the United States Digital Service. We pulled together a list of all the airlines flying out of Zanzibar and Dar Es Salaam. I worked from the top of the list and Katie worked from the bottom. We read each airline's website for their regulations. We found out that 6 out of the 14 airlines would take a cat.
 
-We then set out to find all the US federal regulations checking the USDA, CDC, FWS, Customs, JFK Airport authority. Then we went down to the state level checking with publich health and the department of agriculture for both New York and Massachusets. 
+We then set out to find all the US federal regulations by checking the USDA, CDC, FWS, Customs, and JFK Airport authority. Then we went down to the state level checking with public health and the department of agriculture for both New York and Massachusets. 
 
-Inbetween the research we started discussing names. I floated Zanzibar and calling her Zani for short since she is a bit excentric. But that didn't feel right. We both agreed that she should have a name with some connection with Tanzinia. Katie then asked what about a Swahili name and I jokingly googled the word for cat in Swahili. Paka. We both liked it but decided it would be silly to name out cat "cat". We agreed it was good enough for now and would help us not become to attached until we knew she could come home with us
+In between the research, we started discussing names. I floated Zanzibar and called her Zani for short since she is a bit excentric. But that didn't feel right. We both agreed that she should have a name with some connection with Tanzania. Katie then asked what about a Swahili name and I jokingly googled the word for cat in Swahili. Paka. We both liked it but decided it would be silly to name our cat "cat". We agreed it was good enough for now and would help us not become too attached until we knew she could come home with us
 
-At this point things work looking possible we just needed to find a vet. Katie comiled a lists of all establishments that looked remotly like a vet in Zanzibar and Dar Es Sallam (It was a short list). The only on that picked up was pet care house in dar es sallam. She then sent them mny photos of the kitten, a video of her waling and pictures of her teeth. Which again she trusted us completely with forcing her mouth open to get said phots. The vet came back and said she was aroung 9-11 weeks old. This left us with a single airline that would work.
+At this point things work looking possible we just needed to find a vet. Katie compiled a list of all establishments that looked remotely like a vet in Zanzibar and Dar Es Salaam (It was a short list). The only one that picked up was Pet Care House in Dar Es Salaam. She then sent them many photos of the kitten, a video of her walking, and pictures of her teeth. Again she trusted us completely letting us force her mouth open to get said photos. The vet came back and said she was around 9-11 weeks old. This left us with a single airline that would work.
 
 ## The crunch
 
-At this point it is around 4pm on a Friday and our original flight leaves on Monday. Between now and then the vet is only open tomorrow from 9am - 1pm. Still worried that she might have somthing wrong with her precluding us from keeping her. We made it our missions to get her to the vet.
+At this point, it is around 4pm on a Friday and our original flight leaves on Monday. Between now and then the vet is only open tomorrow from 9am - 1pm. Still worried that she might have something wrong with her precluding us from keeping her. We made it our mission to get her to the vet.
 
-We found a ferry to Dar es sallam at 7am, convinced the hotel owner to drive us to said ferry, then convinced him to take us to a pet store to get a carrier. On the way to the store we stoped at an ATM. Due to the unreliable banking system most tranasactions in Tanzania are done in cash. We pulled out a lot of money. Enough to pay for our htoel, the car carier, any vet expenses and the ferry. We had to do multiple transactions. Since we were taking so long the armed gaurd out side checked on us multiple times to see if we were okay.
+We found a ferry to Dar Es Salaam at 7am, convinced the hotel owner to drive us to said ferry, then convinced him to take us to a pet store to get a carrier. On the way to the store, we stopped at an ATM. Due to the unreliable banking system, most transactions in Tanzania are done in cash. We pulled out a lot of money. Enough to pay for our hotel, the car, cat carrier, any vet expenses, and the ferry. We had to do multiple transactions. Since we were taking so long the armed guard outside checked on us multiple times to see if we were okay.
 
-Now late in the evening we got back to our hotel carrier in hand and plan cemented. I went out to grab us food and a towel to make the carrier more comphortable for paka. Meanwhile, Katie paked up our things. Stressed and tired we set an alarm for 4:30 and went to sleep. 
+Now late in the evening we got back to our hotel carrier in hand and plan cemented. I went out to grab us food and a towel to make the carrier more comfortable for Paka. Meanwhile, Katie packed up our things. Stressed and tired we set an alarm for 4:30 and went to sleep. 
 
-So much for our vacation from our vacation. To be continued....
+So much for our vacation from our vacation. To be continued...
