--- a/_posts/_drafts/2022-07-05-zanzibar.md
+++ b/_posts/_drafts/2022-07-05-zanzibar.md
@@ -24,6 +24,9 @@ Not wanting to go to dinner without her we waited for 1 minute. Which quickly tu
 
 The next day I awoke with a cough, stuffy nose, and nasal drip. Inhaling all the dust in the Serengeti had caught up to me. I was kicking myself for not wearing a mask during the game drives. When we arrived at breakfast we noticed that there was now a single table set for the four of us. The hotel owner was so happy that we had become friends and even introduced us to some of her Italian friends/family via face time. 
 
+![A tray of fruit containing passion fruit, watermelon, and avocado](/assets/images/2022-07-05-zanzibar/avocado.jpg)
+{% include caption.html text="Giant avocados that we had for breakfast" %}
+
 About halfway through our meal the kitten had made her way to us. We could tell that she was looking for a motherly connection. After I finished my meal I picked her up into my lap. As I pet her I noticed that she had a tick. After a quick inspection, I found two more. 
 
 ## Tick Removal
@@ -38,9 +41,15 @@ Given my sickness and our need for relaxation, we decided to rest and meet up wi
 
 For lunch, we went to a nearby spa that was serving western food. I ordered a chicken noodle soup and ginger tea for my throat. The ginger tea was the strongest ginger tea I had ever had. I dumped all of the sugar packets on the table and then it was only barely palatable. Stobernally and "for my health" I drank the entire glass and the glass Katie ordered. I brought a small amount of chicken back to the kitten and she turned her nose up at it preferring the milk and canned tuna we had been feeding her.
 
+{% include image-gallery.html folder="/assets/images/2022-07-05-zanzibar/chicken-noodle" %}
+
+
 ## Sand Art
 
 That evening we meet up with our friends. Still not feeling well I sat on the beach and watched our things while they enjoyed the water. To pass the time I started making a turtle in the sand. As I worked I was approached by many vendors trying to sell me goods. When they were done swimming we were approached by a vendor. In response to his sales pitch, we replied "2 dollars for photo with turtle". He laughed and without hesitation responded, "maybe tomorrow". We all had a good laugh. For me, the moment was a nice reminder that no matter our background and current situation. We are all human.
+
+{% include image-gallery.html folder="/assets/images/2022-07-05-zanzibar/art" %}
+
 
 ## Snorkeling
 
@@ -52,11 +61,15 @@ Snorkeling was amazing!!! Thankfully, we were protected from the wind by a small
 
 On the way back I was no longer worried about sea sickness ruining my snorkeling and got up on the second deck of the boat. I enjoyed the views and soaking in the sun.
 
+{% include image-gallery.html folder="/assets/images/2022-07-05-zanzibar/snorkeling" %}
+
 ## Dehydration
 
 That night we went out for food and happy hour drinks. As we were eating Katie began to feel unwell and we had to go home early. I got her back to our room and had her drink lots of fluids. I then devised a plan to lift her spirits. I went outside to grab the kitten and bring her into our room. It worked! She snuggled right up with Katie. Burrowing herself into her armpit and started purring.
 
 As it became time to go to bed we discussed what to do with the cat. Katie asked if she could stay here. And we agreed that she was too small to sleep with us. I said we could put her in the bathroom and Katie replied "If you put her in the bathroom we are keeping her". So I immediately got up and put her back outside. But she was having non of that. She got to our door and started meowing right after I closed it. Needless to say now, she slept in the bathroom that night.
+
+{% include image-gallery.html folder="/assets/images/2022-07-05-zanzibar/dehydration" %}
 
 ## The bath
 
@@ -67,6 +80,8 @@ Now having a system down. I held her. Katie cut back her hair. and Edvard remove
 We tried to remove the others with no luck. At this point, the kitten was very uncomfortable and we decided to call it good enough. Just as with the tick removal the previous day. She immediately calmed down and started purring.
 
 She was clueless about how to dry out. She tried to shake her legs out but was too weak/ didn't have the coordination. We tried to encourage her to sit in the sun but she wanted to be next to/on top of us. So we took her back to our room and she went to sleep nuzzled in Katie's armpit. She was insistent on being right next to her skin. Yet another example of how she advocates and demands exactly what she needs from us.
+
+{% include image-gallery.html folder="/assets/images/2022-07-05-zanzibar/bath" %}
 
 ## The discussion
 
@@ -82,6 +97,9 @@ In between the research, we started discussing names. I floated Zanzibar and cal
 
 At this point things work looking possible we just needed to find a vet. Katie compiled a list of all establishments that looked remotely like a vet in Zanzibar and Dar Es Salaam (It was a short list). The only one that picked up was Pet Care House in Dar Es Salaam. She then sent them many photos of the kitten, a video of her walking, and pictures of her teeth. Again she trusted us completely letting us force her mouth open to get said photos. The vet came back and said she was around 9-11 weeks old. This left us with a single airline that would work.
 
+{% include image-gallery.html folder="/assets/images/2022-07-05-zanzibar/logistics" %}
+
+
 ## The crunch
 
 At this point, it is around 4pm on a Friday and our original flight leaves on Monday. Between now and then the vet is only open tomorrow from 9am - 1pm. Still worried that she might have something wrong with her precluding us from keeping her. We made it our mission to get her to the vet.
@@ -89,5 +107,8 @@ At this point, it is around 4pm on a Friday and our original flight leaves on Mo
 We found a ferry to Dar Es Salaam at 7am, convinced the hotel owner to drive us to said ferry, then convinced him to take us to a pet store to get a carrier. On the way to the store, we stopped at an ATM. Due to the unreliable banking system, most transactions in Tanzania are done in cash. We pulled out a lot of money. Enough to pay for our hotel, the car, cat carrier, any vet expenses, and the ferry. We had to do multiple transactions. Since we were taking so long the armed guard outside checked on us multiple times to see if we were okay.
 
 Now late in the evening we got back to our hotel carrier in hand and plan cemented. I went out to grab us food and a towel to make the carrier more comfortable for Paka. Meanwhile, Katie packed up our things. Stressed and tired we set an alarm for 4:30 and went to sleep. 
+
+{% include image-gallery.html folder="/assets/images/2022-07-05-zanzibar/crunch" %}
+
 
 So much for our vacation from our vacation. To be continued...
